[package]
name = "tun2tor"
version = "0.1.0"
authors = ["Conrad Kramer <ckrames1234@gmail.com>"]
repository = "https://github.com/iCepa/tun2tor.git"
homepage = "https://github.com/iCepa/tun2tor"
description = "Connect a virtual utun interface to tor"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.1.*"
byteorder = "0.3.*"
mio = { git = "https://github.com/carllerche/mio.git", rev = "f4b3c35" }

[dependencies.socks]
path = "socks"
