[package]
name = "tun2tor"
version = "0.1.0"
authors = ["Conrad Kramer <ckrames1234@gmail.com>"]
repository = "https://github.com/iCepa/tun2tor.git"
homepage = "https://github.com/iCepa/tun2tor"
description = "Connect a virtual utun interface to tor"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
ip = "1.0"

[dependencies.socks]
path = "socks"
