[package]
name = "tun2tor"
version = "0.1.1"
authors = [
    "Conrad Kramer <conrad@kramerapps.com>",
    "Alexander Færøy <ahf@torproject.org>",
    "Benjamin Erhart <berhart@netzarchitekten.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
byteorder = "1.2"
futures = "0.1"
libc = "0.2"
lwip = { path = "lwip" }
log = "0.4"
mio = "0.6"
nix = "0.9"
tokio-core = "0.1"
tokio-io = "0.1"
