[package]
name = "lwip"
version = "2.1.1"
authors = ["Conrad Kramer <conrad@kramerapps.com>", "Benjamin Erhart <berhart@netzarchitekten.com>"]
build = "build.rs"

[dependencies]
byteorder = "1.2"
futures = "0.1"
tokio-core = "0.1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
